--- a/templates/vhost/vhost_ssl_footer.j2
+++ b/templates/vhost/vhost_ssl_footer.j2
@@ -15,7 +15,7 @@
   {{ key }} {{ value }};
 {% endif %}
 {% endfor %}
-{% endif %}
+{% endif -%}
 
 {% if item.vhost_cfg_ssl_append|default(false) %}
 {% for key,value in item.vhost_cfg_ssl_append|dictsort %}
@@ -28,7 +28,7 @@
   {{ key }} {{ value }};
 {% endif %}
 {% endfor %}
-{% endif %}
+{% endif -%}
 
 {% if item.raw_append|default(false) and item.raw_append is iterable%}
 {% for line in item.raw_append %}
