--- a/templates/vhost/vhost_ssl_header.j2
+++ b/templates/vhost/vhost_ssl_header.j2
@@ -29,10 +29,10 @@ server {
 {# Note: the value of item.listen_ip should be a list or a string #}
 {% if item.listen_ip|default('*') is not string and item.listen_ip is iterable -%}
 {% for ip in item.listen_ip %}
-  listen  {{ ip }}:{{ item.ssl_port }}{{ _ssl_listen_option }}{{ _spdy_listen_option }}{{ _listen_options }};
+  listen  {{ ip }}:{{ item.ssl_port|default('443') }}{{ _ssl_listen_option }}{{ _spdy_listen_option }}{{ _listen_options }};
 {% endfor %}
 {% else %}
-  listen  {{ item.listen_ip|default('*') }}:{{ item.ssl_port }}{{ _ssl_listen_option }}{{ _spdy_listen_option }}{{ _listen_options }};
+  listen  {{ item.listen_ip|default('*') }}:{{ item.ssl_port|default('443') }}{{ _ssl_listen_option }}{{ _spdy_listen_option }}{{ _listen_options }};
 {% endif %}
 
 {# check to see if ipv6 support exists in the kernel before applying #}
@@ -40,10 +40,10 @@ server {
 {# Note: the value of item.ipv6_listen_ip should be a list or a string #}
 {% if item.ipv6_listen_ip|default('::') is not string and item.ipv6_listen_ip is iterable -%}
 {% for ipv6 in item.ipv6_listen_ip %}
-  listen  [{{ ipv6 }}]:{{ item.ssl_port }} ssl{{ _spdy_listen_option }}{{ _ipv6_listen_options }};
+  listen  [{{ ipv6 }}]:{{ item.ssl_port|default('443') }} ssl{{ _spdy_listen_option }}{{ _ipv6_listen_options }};
 {% endfor %}
 {% else %}
-  listen  [{{ item.ipv6_listen_ip|default('::') }}]:{{ item.ssl_port }} ssl{{ _spdy_listen_option }}{{ _ipv6_listen_options }};
+  listen  [{{ item.ipv6_listen_ip|default('::') }}]:{{ item.ssl_port|default('443') }} ssl{{ _spdy_listen_option }}{{ _ipv6_listen_options }};
 {% endif %}
 {% endif %}
 {% if item.server_name|default(false) %}
@@ -61,10 +61,10 @@ server {
 {# Note: the value of item.listen_ip should be a list or a string #}
 {% if item.listen_ip|default('*') is not string and item.listen_ip is iterable -%}
 {% for ip in item.listen_ip %}
-  listen  {{ ip }}:{{ item.ssl_port }}{{ _ssl_listen_option }}{{ _spdy_listen_option }}{{ _listen_options }};
+  listen  {{ ip }}:{{ item.ssl_port|default('443') }}{{ _ssl_listen_option }}{{ _spdy_listen_option }}{{ _listen_options }};
 {% endfor %}
 {% else %}
-  listen  {{ item.listen_ip|default('*') }}:{{ item.ssl_port }}{{ _ssl_listen_option }}{{ _spdy_listen_option }}{{ _listen_options }};
+  listen  {{ item.listen_ip|default('*') }}:{{ item.ssl_port|default('443') }}{{ _ssl_listen_option }}{{ _spdy_listen_option }}{{ _listen_options }};
 {% endif -%}
 
 {# check to see if ipv6 support exists in the kernel before applying #}
@@ -72,10 +72,10 @@ server {
 {# Note: the value of item.ipv6_listen_ip should be a list or a string #}
 {% if item.ipv6_listen_ip|default('::') is not string and item.ipv6_listen_ip is iterable -%}
 {% for ipv6 in item.ipv6_listen_ip %}
-  listen  [{{ ipv6 }}]:{{ item.ssl_port }} ssl{{ _spdy_listen_option }}{{ _ipv6_listen_options }};
+  listen  [{{ ipv6 }}]:{{ item.ssl_port|default('443') }} ssl{{ _spdy_listen_option }}{{ _ipv6_listen_options }};
 {% endfor %}
 {% else %}
-  listen  [{{ item.ipv6_listen_ip|default('::') }}]:{{ item.ssl_port }} ssl{{ _spdy_listen_option }}{{ _ipv6_listen_options }};
+  listen  [{{ item.ipv6_listen_ip|default('::') }}]:{{ item.ssl_port|default('443') }} ssl{{ _spdy_listen_option }}{{ _ipv6_listen_options }};
 {% endif %}
 {% endif -%}
 
